add goal detail page

--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,8 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/services/goal.js"></script>
         <script src="scripts/services/settings.js"></script>
+        <script src="scripts/controllers/goal.js"></script>
+        <script src="scripts/services/indicator.js"></script>
         <!-- endbuild -->
 </body>
 </html>
