add goals to main nav

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="NavCtrl">
         <div class="container">
           <div class="navbar-header">
 
@@ -32,15 +32,25 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/"><img src="/images/logo.png"></a>
+            <a class="navbar-brand" href="/"><img src="/images/logo.png"></a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+                <li><a href="/"><i class="fa fa-home text-info"></i> Home</a></li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" ><i class="fa fa-dot-circle-o text-info"></i> Goals <span class="caret"></span></a>
+                    <ul class="dropdown-menu" style="overflow-y: auto; max-height: 400px">
+                        <li ng-repeat="goal in goals.results">
+                            <a ng-href="/#!/goals/{{ goal.id }}/{{ goal.slug }}">
+                                <img ng-src="{{ goal.image_small }}" style="max-height: 30px">
+                                {{ goal.name }}
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li><a ng-href="/#!/about"><i class="fa fa-info text-info"></i> About</a></li>
             </ul>
           </div>
         </div>
@@ -97,6 +107,7 @@
         <script src="scripts/services/indicator.js"></script>
         <script src="scripts/controllers/indicator.js"></script>
         <script src="scripts/services/component.js"></script>
+        <script src="scripts/controllers/nav.js"></script>
         <!-- endbuild -->
 </body>
 </html>
