--- a/app/index.html
+++ b/app/index.html
@@ -24,37 +24,44 @@
 
     <!-- Add your site or application content here -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="NavCtrl">
+        <div class="nav-goals-strip">
+            <a ng-repeat='goal in goals.results'
+                ng-href="/#!/goals/{{ goal.id }}/{{ goal.slug }}"
+                data-toggle="tooltip" title="{{ goal.name }}"
+                class="nav-goals-strip-item"
+                style="background: {{ goal.extras.color_primary||'#fff' }}">
+            </a>
+        </div>
         <div class="container">
-          <div class="navbar-header">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+                <a class="navbar-brand" href="/"><img src="/images/logo.png"></a>
+            </div>
 
-            <a class="navbar-brand" href="/"><img src="/images/logo.png"></a>
-          </div>
+            <div class="collapse navbar-collapse" id="js-navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="/"><i class="fa fa-home text-info"></i> Home</a></li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" ><i class="fa fa-dot-circle-o text-info"></i> Goals <span class="caret"></span></a>
+                        <ul class="dropdown-menu" style="overflow-y: auto; max-height: 400px">
+                            <li ng-repeat="goal in goals.results">
+                                <a ng-href="/#!/goals/{{ goal.id }}/{{ goal.slug }}">
+                                    <img ng-src="{{ goal.image_small }}" style="max-height: 30px">
+                                    {{ goal.name }}
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a ng-href="/#!/about"><i class="fa fa-info text-info"></i> About</a></li>
+                </ul>
+            </div>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-                <li><a href="/"><i class="fa fa-home text-info"></i> Home</a></li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" ><i class="fa fa-dot-circle-o text-info"></i> Goals <span class="caret"></span></a>
-                    <ul class="dropdown-menu" style="overflow-y: auto; max-height: 400px">
-                        <li ng-repeat="goal in goals.results">
-                            <a ng-href="/#!/goals/{{ goal.id }}/{{ goal.slug }}">
-                                <img ng-src="{{ goal.image_small }}" style="max-height: 30px">
-                                {{ goal.name }}
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li><a ng-href="/#!/about"><i class="fa fa-info text-info"></i> About</a></li>
-            </ul>
-          </div>
         </div>
     </div>
 
