--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only" translate>Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -46,9 +46,9 @@
 
             <div class="collapse navbar-collapse" id="js-navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/"><i class="fa fa-home text-info"></i> Home</a></li>
+                    <li><a href="/"><i class="fa fa-home text-info"></i> <translate>Home</translate></a></li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" ><i class="fa fa-dot-circle-o text-info"></i> Goals <span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" ><i class="fa fa-dot-circle-o text-info"></i> <translate>Goals</translate> <span class="caret"></span></a>
                         <ul class="dropdown-menu" style="overflow-y: auto; max-height: 400px">
                             <li ng-repeat="goal in goals.results">
                                 <a ng-href="/#!/goals/{{ goal.id }}/{{ goal.slug }}">
@@ -58,7 +58,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a ng-href="/#!/about"><i class="fa fa-info text-info"></i> About</a></li>
+                    <li><a ng-href="/#!/about"><i class="fa fa-info text-info"></i> <translate>About</translate></a></li>
                 </ul>
             </div>
 
@@ -99,6 +99,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/nvd3/build/nv.d3.js"></script>
