--- a/app/index.html
+++ b/app/index.html
@@ -65,9 +65,7 @@
         </div>
     </div>
 
-    <div class="container">
     <div ng-view=""></div>
-    </div>
 
     <div class="footer">
       <div class="container">
@@ -121,6 +119,8 @@
         <script src="scripts/services/search.js"></script>
         <script src="scripts/services/lookup.js"></script>
         <script src="scripts/controllers/search.js"></script>
+        <script src="scripts/services/target.js"></script>
+        <script src="scripts/services/progress.js"></script>
         <!-- endbuild -->
 </body>
 </html>
