--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
                 </form>
 
                 <ul class="nav navbar-nav">
-                    <li><a ng-href="/#!/about" translate>Data</a></li>
+                    <li><a ng-href="/#!/data" translate>Data</a></li>
                     <li><a ng-href="/#!/about">About</a></li>
                 </ul>
             </div>
@@ -121,6 +121,7 @@
         <script src="scripts/controllers/search.js"></script>
         <script src="scripts/services/target.js"></script>
         <script src="scripts/services/progress.js"></script>
+        <script src="scripts/controllers/data.js"></script>
         <!-- endbuild -->
 </body>
 </html>
