--- a/app/index.html
+++ b/app/index.html
@@ -122,6 +122,7 @@
         <script src="scripts/services/target.js"></script>
         <script src="scripts/services/progress.js"></script>
         <script src="scripts/controllers/data.js"></script>
+        <script src="scripts/filters/truncatechars.js"></script>
         <!-- endbuild -->
 </body>
 </html>
