--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,24 @@
                     <li><a ng-href="/#!/data" translate>Data</a></li>
                     <li><a ng-href="/#!/about">About</a></li>
                 </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li role="presentation" class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" role="button">
+                            <i class="fa fa-share-alt"></i> Share
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+                                    <a class="a2a_button_facebook"></a>
+                                    <a class="a2a_button_twitter"></a>
+                                    <a class="a2a_button_google_plus"></a>
+                                    <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
 
         </div>
@@ -83,6 +101,8 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
+
+    <script async src="https://static.addtoany.com/menu/page.js"></script>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
