--- a/app/index.html
+++ b/app/index.html
@@ -1,148 +1,149 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <base href="/">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
-    <link rel="stylesheet" href="bower_components/nvd3/build/nv.d3.css" />
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-  </head>
-  <body ng-app="dgsDash">
-    <!--[if lte IE 8]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="NavCtrl">
-        <div class="nav-goals-strip">
-            <a ng-repeat='goal in goals.results'
-                ng-href="/#!/goals/{{ goal.id }}/{{ goal.slug }}"
-                data-toggle="tooltip" title="{{ goal.name }}"
-                class="nav-goals-strip-item"
-                style="background: {{ goal.extras.color_primary||'#fff' }}">
-            </a>
-        </div>
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-                    <span class="sr-only" translate>Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-
-                <a class="navbar-brand" href="/"><img src="/images/logo.png"></a>
-            </div>
-
-            <div class="collapse navbar-collapse" id="js-navbar-collapse">
-                <form class="navbar-form navbar-left" ng-submit="search()">
-                    <div class="input-group">
-                        <input type="text" class="form-control" id="site-search"
-                                placeholder="{{ 'Search'|translate }}"
-                                ng-model="lookup.search.q" ng-model-options="{debounce: 1000}">
-                        <div class="input-group-btn">
-                            <button class="btn btn-primary" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                        </div>
-                    </div>
-                </form>
-
-                <ul class="nav navbar-nav">
-                    <li><a ng-href="/#!/data" translate>Data</a></li>
-                    <li><a ng-href="/#!/about">About</a></li>
-                </ul>
-
-                <ul class="nav navbar-nav navbar-right">
-                    <li role="presentation" class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" role="button">
-                            <i class="fa fa-share-alt"></i> Share
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-                                    <a class="a2a_button_facebook"></a>
-                                    <a class="a2a_button_twitter"></a>
-                                    <a class="a2a_button_google_plus"></a>
-                                    <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-    </div>
-
-    <div ng-view=""></div>
-
-    <div class="footer">
-      <div class="container">
-      </div>
-    </div>
-
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
-
-    <script async src="https://static.addtoany.com/menu/page.js"></script>
-
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-aria/angular-aria.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
-    <script src="bower_components/underscore/underscore.js"></script>
-    <script src="bower_components/d3/d3.js"></script>
-    <script src="bower_components/nvd3/build/nv.d3.js"></script>
-    <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
-
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/services/goal.js"></script>
-        <script src="scripts/services/settings.js"></script>
-        <script src="scripts/controllers/goal.js"></script>
-        <script src="scripts/services/indicator.js"></script>
-        <script src="scripts/controllers/indicator.js"></script>
-        <script src="scripts/services/component.js"></script>
-        <script src="scripts/controllers/nav.js"></script>
-        <script src="scripts/services/search.js"></script>
-        <script src="scripts/services/lookup.js"></script>
-        <script src="scripts/controllers/search.js"></script>
-        <script src="scripts/services/target.js"></script>
-        <script src="scripts/services/progress.js"></script>
-        <script src="scripts/controllers/data.js"></script>
-        <script src="scripts/filters/truncatechars.js"></script>
+<html ng-app="dgsDash">
+    <head>
+        <meta charset="utf-8">
+        <base href="/">
+        <title ng-bind="title || settings.SITE_NAME"></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <!-- build:css(.) styles/vendor.css -->
+        <!-- bower:css -->
+        <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
+        <link rel="stylesheet" href="bower_components/nvd3/build/nv.d3.css" />
+        <!-- endbower -->
         <!-- endbuild -->
-</body>
+        <!-- build:css(.tmp) styles/main.css -->
+        <link rel="stylesheet" href="styles/main.css">
+        <!-- endbuild -->
+    </head>
+    <body>
+        <!--[if lte IE 8]>
+          <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+        <!-- Add your site or application content here -->
+        <div class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="NavCtrl">
+            <div class="nav-goals-strip">
+                <a ng-repeat='goal in goals.results'
+                    ng-href="/#!/goals/{{ goal.id }}/{{ goal.slug }}"
+                    data-toggle="tooltip" title="{{ goal.name }}"
+                    class="nav-goals-strip-item"
+                    style="background: {{ goal.extras.color_primary||'#fff' }}">
+                </a>
+            </div>
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+                        <span class="sr-only" translate>Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+
+                    <a class="navbar-brand" href="/"><img src="/images/logo.png"></a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="js-navbar-collapse">
+                    <form class="navbar-form navbar-left" ng-submit="search()">
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="site-search"
+                                    placeholder="{{ 'Search'|translate }}"
+                                    ng-model="lookup.search.q" ng-model-options="{debounce: 1000}">
+                            <div class="input-group-btn">
+                                <button class="btn btn-primary" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                            </div>
+                        </div>
+                    </form>
+
+                    <ul class="nav navbar-nav">
+                        <li><a ng-href="/#!/data" translate>Data</a></li>
+                        <li><a ng-href="/#!/about">About</a></li>
+                    </ul>
+
+                    <ul class="nav navbar-nav navbar-right">
+                        <li role="presentation" class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" role="button">
+                                <i class="fa fa-share-alt"></i> Share
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+                                        <a class="a2a_button_facebook"></a>
+                                        <a class="a2a_button_twitter"></a>
+                                        <a class="a2a_button_google_plus"></a>
+                                        <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+        <div ng-view=""></div>
+
+        <div class="footer">
+          <div class="container">
+          </div>
+        </div>
+
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+         <script>
+           !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
+           (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
+           r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
+           }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+           ga('create', 'UA-XXXXX-X');
+           ga('send', 'pageview');
+        </script>
+
+        <script async src="https://static.addtoany.com/menu/page.js"></script>
+
+        <!-- build:js(.) scripts/vendor.js -->
+        <!-- bower:js -->
+        <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
+        <script src="bower_components/angular-animate/angular-animate.js"></script>
+        <script src="bower_components/angular-aria/angular-aria.js"></script>
+        <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+        <script src="bower_components/angular-messages/angular-messages.js"></script>
+        <script src="bower_components/angular-resource/angular-resource.js"></script>
+        <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+        <script src="bower_components/angular-touch/angular-touch.js"></script>
+        <script src="bower_components/angular-gettext/dist/angular-gettext.js"></script>
+        <script src="bower_components/underscore/underscore.js"></script>
+        <script src="bower_components/d3/d3.js"></script>
+        <script src="bower_components/nvd3/build/nv.d3.js"></script>
+        <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
+        <!-- endbower -->
+        <!-- endbuild -->
+
+            <!-- build:js({.tmp,app}) scripts/scripts.js -->
+            <script src="scripts/app.js"></script>
+            <script src="scripts/controllers/main.js"></script>
+            <script src="scripts/controllers/about.js"></script>
+            <script src="scripts/services/goal.js"></script>
+            <script src="scripts/services/settings.js"></script>
+            <script src="scripts/controllers/goal.js"></script>
+            <script src="scripts/services/indicator.js"></script>
+            <script src="scripts/controllers/indicator.js"></script>
+            <script src="scripts/services/component.js"></script>
+            <script src="scripts/controllers/nav.js"></script>
+            <script src="scripts/services/search.js"></script>
+            <script src="scripts/services/lookup.js"></script>
+            <script src="scripts/controllers/search.js"></script>
+            <script src="scripts/services/target.js"></script>
+            <script src="scripts/services/progress.js"></script>
+            <script src="scripts/controllers/data.js"></script>
+            <script src="scripts/filters/truncatechars.js"></script>
+            <!-- endbuild -->
+        </body>
 </html>
