--- a/app/index.html
+++ b/app/index.html
@@ -144,6 +144,7 @@
             <script src="scripts/services/progress.js"></script>
             <script src="scripts/controllers/data.js"></script>
             <script src="scripts/filters/truncatechars.js"></script>
+            <script src="scripts/controllers/target.js"></script>
             <!-- endbuild -->
         </body>
 </html>
