modify search UI & UX

--- a/app/index.html
+++ b/app/index.html
@@ -145,6 +145,7 @@
             <script src="scripts/controllers/data.js"></script>
             <script src="scripts/filters/truncatechars.js"></script>
             <script src="scripts/controllers/target.js"></script>
+            <script src="scripts/controllers/component.js"></script>
             <!-- endbuild -->
         </body>
 </html>
