--- a/app/index.html
+++ b/app/index.html
@@ -154,6 +154,7 @@
             <script src="scripts/controllers/component.js"></script>
             <script src="scripts/services/l.js"></script>
             <script src="scripts/services/areatype.js"></script>
+            <script src="scripts/services/common.js"></script>
             <!-- endbuild -->
         </body>
 </html>
