add progress preview on indicators list

--- a/app/index.html
+++ b/app/index.html
@@ -159,6 +159,7 @@
             <script src="scripts/services/l.js"></script>
             <script src="scripts/services/areatype.js"></script>
             <script src="scripts/services/common.js"></script>
+            <script src="scripts/filters/shortnumber.js"></script>
             <!-- endbuild -->
         </body>
 </html>
