--- a/app/index.html
+++ b/app/index.html
@@ -186,6 +186,8 @@
             <script src="scripts/controllers/plan.js"></script>
             <script src="scripts/services/plan.js"></script>
             <script src="scripts/services/theme.js"></script>
+            <script src="scripts/controllers/theme.js"></script>
+            <script src="scripts/services/sector.js"></script>
             <!-- endbuild -->
         </body>
 </html>
