add sector page

--- a/app/index.html
+++ b/app/index.html
@@ -188,6 +188,7 @@
             <script src="scripts/services/theme.js"></script>
             <script src="scripts/controllers/theme.js"></script>
             <script src="scripts/services/sector.js"></script>
+            <script src="scripts/controllers/sector.js"></script>
             <!-- endbuild -->
         </body>
 </html>
